<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.profile.ProfileFragment">
    <data>
        <variable
            name="item"
            type="com.mariroco.mealapp.domain.model.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/UserCard"
            android:visibility="gone"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    loadFromUrl="@{item.img}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_height="wrap_content"
                    android:text="@{item.name}"
                    app:layout_constraintStart_toEndOf="@id/imgUser"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textStyle="bold"
                    android:textColor="@color/purple_500"
                    android:textSize="20dp"
                    tools:text ="Nombre" />

                <TextView
                    android:id="@+id/txtMail"
                    android:layout_width="0dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_height="wrap_content"
                    android:text="@{item.mail}"
                    app:layout_constraintStart_toEndOf="@id/imgUser"
                    app:layout_constraintTop_toBottomOf="@id/txtName"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="mail@mail.com" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_marginHorizontal="15dp"
                    android:layout_height="wrap_content"
                    android:text="@{item.token}"
                    app:layout_constraintStart_toEndOf="@id/imgUser"
                    app:layout_constraintTop_toBottomOf="@id/txtMail"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="token" />

                <Button
                    android:layout_marginHorizontal="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/username"/>
            <EditText
                android:id="@+id/edtToken"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtUsername"
                android:hint="@string/token"/>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtToken"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/txtOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/transparent_background"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/txtNewAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_account"
                android:textColor="@color/transparent_background"
                app:layout_constraintTop_toBottomOf="@id/txtOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/newAccountContainer"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <EditText
                android:id="@+id/edtNewUsername"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:hint="@string/username"/>
            <EditText
                android:id="@+id/edtNewMail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtNewUsername"
                android:hint="@string/mail"/>
            <EditText
                android:id="@+id/edtNewImg"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtNewMail"
                android:hint="@string/image_url"/>
            <EditText
                android:id="@+id/edtNewToken"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtNewImg"
                android:hint="@string/token"/>
            <Button
                android:id="@+id/btnCreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtNewToken"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/txtNewOr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/transparent_background"
                app:layout_constraintTop_toBottomOf="@id/btnCreate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/txtLoginExisting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existing_account"
                android:textColor="@color/transparent_background"
                app:layout_constraintTop_toBottomOf="@id/txtNewOr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>